# xfce4-timer-plugin

./: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in  configure.in.in  intltool-update  meson.build
icons/: Makefile.am  meson.build
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  meson.build  xfce4-timer-plugin.desktop.in  xfcetimer-old.cpp  xfcetimer-old.h  xfcetimer.c  xfcetimer.cpp  xfcetimer.h
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.po  nl.po  (+22 more)
src/: Makefile.am  Makefile.in  xfce4-timer.desktop.in.in  xfcetimer.c  xfcetimer.h
trunk/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.in
trunk/po/: hu.po  ja.po  pl.po  ru.po
trunk/src/: Makefile.am  xfcetimer.h
